--- a/MVarrior/app/src/main/res/values/strings.xml
+++ b/MVarrior/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MVarrior</string>
     <string name="action_settings">Settings</string>
+    <string name="action_find_pdf_cv">Look PDFs for a CV</string>
+
 </resources>
